docs: fold second adversarial review (verdict: sound-with-fixes; mappings off the table)
Round-2 reviewer, armed with the settled mapping proof, found new productionization gaps
(did not re-litigate mappings). Folded in:
- [HIGH] vanilla is NOT a -javaagent — run.sh launches vspike.VanillaLauncher as the main
  class (transforming CL mandatory); ships as a custom launcher/launch-profile, not a droppable
  agent. Corrected top-line scope + P4.
- [HIGH] real-launcher/zero-Gradle attachment is the true P0 (not mappings, which is resolved);
  reordered milestones to match the plan's own bank-point.
- [HIGH] self-containment is a classloader-model change: LbLoader is a URLClassLoader over
  filesystem URLs; fat-jar nested jars need extract-to-temp + redirect the AT FileReader baked
  into emitted bytecode.
- [MED-HIGH] LbLoader.OWNED can't be proven complete by 'it boots' — mechanically generate the
  (loader-loadable ∩ LB-shadow) intersection.
- [MED] MCEF on real GPU untested for all three (all results software-GL).
- [MED] version brittleness -> fail-loud post-init assertion + pinned loader versions (today a
  missed hook silently boots without LB).
- [LOW] drop self-attach (needs allowAttachSelf, no simpler than -javaagent); name anticheat/ToS;
  strip leftover diagnostics (fml.earlyWindowControl, hookFatal) from the shipped artifact.
Verdict: sound-with-fixes. Bank point.